# octotablet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs  inkrts example output.txt
examples/: README.md  eframe-viewer.rs  sdl2.rs  winit-paint.rs  winit.rs
examples/eframe-viewer/: main.rs  pretty.rs  state.rs
src/: axis.rs  builder.rs  events.rs  lib.rs  main.rs  pad.rs  tablet.rs  tool.rs  util.rs  wl.rs
src/events/: mod.rs  raw.rs  summary.rs
src/platform/: ink.rs  mod.rs  wl.rs
src/platform/ink/: com_impl.rs  mod.rs  packet.rs
src/platform/wl/: mod.rs  pad_impl.rs  summary.rs  tool_impl.rs
src/platform/xinput2/: mod.rs  strings.rs
