[package]
name = "wl-tablet"
version = "0.1.0"
authors = ["aspen <fuzzyzilla01@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    # Windows
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
    # Unix/Wayland
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Common deps.
bitflags = "2.4.2"
enum_dispatch = "0.3.12"
raw-window-handle = "0.6.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"

# Wayland `tablet_unstable_v2` deps.
# Crazy `cfg` stolen verbatim from winit's Cargo.toml as I assume they have more wisdom than I
[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
wayland-backend = { version = "0.3.2", features = ["client_system"], optional = true }
wayland-client = { version = "0.31.1", optional = true }
wayland-protocols = { version = "0.31.0", features = ["client", "unstable"], optional = true }

# Windows Ink `RealTimeStylus`
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
optional = true
features = [
    "Win32_UI_TabletPC",
    "Win32_System_Com",
    "Win32_Foundation",
]

[features]
default = ["wayland-tablet-unstable-v2", "windows-ink"]

# Wayland `tablet_unstable_v2` support
# Note: "unstable" here refers to the protocol itself, not to the stability of it's integration into this crate!
wayland-tablet-unstable-v2 = ["wayland-backend", "wayland-client", "wayland-protocols"]

# Windows Ink `RealTimeStylus` support
windows-ink = ["windows"]

[dev-dependencies]
eframe = {version = "0.26.0", default-features = false, features = ["accesskit", "wayland", "default_fonts", "glow"] }
winit = {version = "0.29.10", default-features = false, features = ["wayland", "rwh_06"]}
tiny-skia = {version = "0.11.3", default-features = false, features = ["std", "simd"]}
usb-ids = "1.2024.1"
softbuffer = "0.4.1"

[build-dependencies]
cfg_aliases = "0.2.0"
